align fixed

--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ nav a.logo{
 
 nav a.logo img{
     max-width: 45px;    
-    margin-top: -20px;
+    margin-top: -31px;
 }
 
 span.logo_txt{
